Fixed up auth, commented out css that made highlight not visible when selecting text, and patch FE with new variable change.

--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -338,7 +338,7 @@ footer p {
     margin: 0;
 }
 
-::-moz-selection {
+/*::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
     background: rgba(255,255,255,.2);
@@ -356,7 +356,7 @@ img::selection {
 
 img::-moz-selection {
     background: 0 0;
-}
+}*/
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
